----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2003-03-01 Robin Johnson  <robbat2@users.sourceforge.net>
    * libraries/xpath/XPath.class.php, libraries/xpath/: 
    - Removed (was part of the early DB config prototype)

2003-02-28 Michal Cihar  <nijel@users.sourceforge.net>
    * tbl_indexes.php3: Show SQL query after modifying/creating index (closes
      #694800), show structure after modifying index.

2003-02-28 Alexander M. Turek  <rabus@users.sourceforge.net>
    * Documentation.html: Fixed a typo.
    * server_privileges.php3: Fixed bug #691910.
    * server_status.php3, lang/*.inc.php3: Patch #683302: InnoDB status monitor,
      thanks to Jason Carlson (jjcarlson).

2003-02-28 Garvin Hicking <me@supergarv.de>
    * config.inc.php3, header.inc.php3, queryframe.php3, querywindow.php3,
      tbl_query_box.php3, libraries/common.lib.php3, libraries/config_import.lib.php3,
      Documentation.html:
      - Finetuneing for query window: Only three tabs, if DefaultTab
        is not set to 'full'.
      - Inserted nobr-Tags to make german translation for 'sql history' fit inside a tab.
      - Improved windowsize of the query window (no a *lot* smaller, hope this will suit
         Rabus ;).
      - Made the textarea smaller (*1.25 instead of *2) for the window only.
      - Fixed a bug when you changed from a table to a database on the left frame and the
        query window still wants to show the previous table.
    * tbl_query_box.php3: Only show fieldlist, when $table is set.
    * translators.html: Adjusted to same topmenu as Documentation.html.
      With the new 'Transformations' item the bar was too large to fit
      on standard 800x600 browser windows.

2003-02-27 Michal Cihar  <nijel@users.sourceforge.net>
    * lang/czech: Updated.
    * lang/english: Resorted.

2003-02-27 Alexander M. Turek  <rabus@users.sourceforge.net>
    * libraries/common.lib.php3, libraries/config_import.lib.php3: