@@ -8,6 +8,8 @@ $Source$
 2003-03-01 Robin Johnson  <robbat2@users.sourceforge.net>
     * libraries/xpath/XPath.class.php, libraries/xpath/: 
     - Removed (was part of the early DB config prototype)
+    * lang/translatecount.sh: 
+    - Counts just how out of date the translations are!
 
 2003-02-28 Michal Cihar  <nijel@users.sourceforge.net>
     * tbl_indexes.php3: Show SQL query after modifying/creating index (closes
